// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyFiltersVueControl renders correctly when collapsed 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyFiltersVueControl renders correctly when expanded for "Bathrooms" 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths expanded">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyFiltersVueControl renders correctly when expanded for "Bedrooms" 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds expanded">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyFiltersVueControl renders correctly when expanded for "CarSpaces" 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars expanded">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyFiltersVueControl renders correctly when expanded for "MaxPrice" 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price expanded">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;

exports[`PropertyFiltersVueControl renders correctly when expanded for "PropertyType" 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18 fa-lg" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bedrooms filter control">
    3
    <svg aria-hidden="true" class="svg-inline--fa fa-bed fa-w-20 fa-lg" data-icon="bed" data-prefix="fas" focusable="false" role="img" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M176 256c44.11 0 80-35.89 80-80s-35.89-80-80-80-80 35.89-80 80 35.89 80 80 80zm352-128H304c-8.84 0-16 7.16-16 16v144H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v352c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-48h512v48c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V240c0-61.86-50.14-112-112-112z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16 fa-lg" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show number of car spaces filter control">
    1
    <svg aria-hidden="true" class="svg-inline--fa fa-car fa-w-16 fa-lg" data-icon="car" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M499.99 176h-59.87l-16.64-41.6C406.38 91.63 365.57 64 319.5 64h-127c-46.06 0-86.88 27.63-103.99 70.4L71.87 176H12.01C4.2 176-1.53 183.34.37 190.91l6 24C7.7 220.25 12.5 224 18.01 224h20.07C24.65 235.73 16 252.78 16 272v48c0 16.12 6.16 30.67 16 41.93V416c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h256v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-54.07c9.84-11.25 16-25.8 16-41.93v-48c0-19.22-8.65-36.27-22.07-48H494c5.51 0 10.31-3.75 11.64-9.09l6-24c1.89-7.57-3.84-14.91-11.65-14.91zm-352.06-17.83c7.29-18.22 24.94-30.17 44.57-30.17h127c19.63 0 37.28 11.95 44.57 30.17L384 208H128l19.93-49.83zM96 319.8c-19.2 0-32-12.76-32-31.9S76.8 256 96 256s48 28.71 48 47.85-28.8 15.95-48 15.95zm320 0c-19.2 0-48 3.19-48-15.95S396.8 256 416 256s32 12.76 32 31.9-12.8 31.9-32 31.9z" fill="currentColor" />
    </svg>
  </button>
  <button title="Show maximum price filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-dollar-sign fa-w-9 fa-lg" data-icon="dollar-sign" data-prefix="fas" focusable="false" role="img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Refresh properties">
    <svg aria-hidden="true" class="svg-inline--fa fa-sync fa-w-16" data-icon="sync" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Apply filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options types expanded">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
  <div class="layer-options beds">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 40%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 40%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options baths">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options cars">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 0%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="1" aria-valuetext="1" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="layer-options price">
    <select id="p_max_price">
      <option value="500000">500 K</option>
      <option value="550000">550 K</option>
      <option value="600000">600 K</option>
      <option value="650000">650 K</option>
      <option value="700000">700 K</option>
      <option value="750000">750 K</option>
      <option value="800000">800 K</option>
      <option value="850000">850 K</option>
      <option value="900000">900 K</option>
      <option value="950000">950 K</option>
      <option value="1000000">1 M</option>
      <option value="1100000">1.1 M</option>
      <option value="1200000">1.2 M</option>
      <option value="1300000">1.3 M</option>
      <option value="1400000">1.4 M</option>
      <option value="1500000">1.5 M</option>
      <option value="1600000">1.6 M</option>
      <option value="1700000">1.7 M</option>
      <option value="1800000">1.8 M</option>
      <option value="1900000">1.9 M</option>
      <option value="2000000">2 M</option>
      <option value="2250000">2.25 M</option>
      <option value="2500000">2.5 M</option>
      <option value="2750000">2.75 M</option>
      <option value="3000000">3 M</option>
      <option value="4000000">4 M</option>
      <option value="5000000">5 M</option>
      <option value="6000000">6 M</option>
      <option value="7000000">7 M</option>
      <option value="8000000">8 M</option>
      <option value="9000000">9 M</option>
      <option value="10000000">10 M</option>
    </select>
  </div>
</div>
`;
